--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,24 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body:before {
+  content: "";
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  background: rgb(0, 150, 136);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 150, 136, 1) 0%,
+    rgba(0, 150, 136, 1) 15%,
+    rgba(215, 219, 214, 1) 15%,
+    rgba(215, 219, 214, 1) 130%
+  );
+}
+
 a {
   color: inherit;
   text-decoration: none;
